--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,3 +63,17 @@
     path: "/etc/cron.hourly/logrotate"
     src: "/etc/cron.daily/logrotate"
     state: "{{ 'link' if logrotate_use_hourly_rotation else 'absent' }}"
+
+- name: Create system.d timer
+  become: true
+  template:
+    src: 'etc/system.d/system/logrotate.timer.j2'
+    dest: '/etc/system.d/system/logrotate.timer'
+    owner: root
+    group: root
+    mode: 0644
+  when: logrotate_use_systemd_timer
+  notify:
+    - systemd_daemon_reload
+  tags:
+    - configuration
